<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">



            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#ffffff"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtCourseID"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:hint="@string/course_id" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtCourseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/course_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtCourseCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/coursecode" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_date" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_date" />
        </android.support.design.widget.TextInputLayout>


    </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>